# mini-blockchain

./: .gitignore  ARCHITECTURE.md  CONTRACT_EXAMPLES.md  Cargo.toml  README.md  SMART_CONTRACTS.md  build.rs
.blockchain_data/: blockchain.json  blockchain.json.backup.1  blockchain.json.backup.4  contracts.json  multisig.json  tokens.json
.blockchain_data/wallets/: 13VV6wSjLp6DiqdTFKqTv2UoNwpNpH8ZBf.json  1BR7GXvCW3GBebbfEA2isRBJ5TqpKiYhym.json  1NGSiSu1pYSuboDtqpPzyDHLYzV7qW6UKF.json
examples/: add.asm
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs  websocket.rs
src/cli/: commands.rs  mod.rs
src/contract/: compiler.rs  contract.rs  mod.rs  opcodes.rs  vm.rs
src/core/: block.rs  blockchain.rs  chain_state.rs  compression.rs  fee.rs  mod.rs  script.rs  spv.rs  transaction.rs
src/crypto/: hash.rs  keys.rs  merkle.rs  mod.rs
src/mining/: mempool.rs  miner.rs  mod.rs
src/multisig/: manager.rs  mod.rs  transaction.rs  wallet.rs
src/network/: addrman.rs  discovery.rs  message.rs  mod.rs  node.rs  parallel_sync.rs  peer.rs  server.rs  sync.rs  upnp.rs
src/storage/: checkpoint.rs  index.rs  mod.rs  persistence.rs  pruning.rs  utxo_cache.rs
src/token/: manager.rs  mod.rs  token.rs
src/wallet/: mod.rs  wallet.rs
web-ui/: package-lock.json  package.json
web-ui/src/lib/: api.ts  websocket.ts
web-ui/src/lib/components/: ConnectionStatus.svelte  SearchBar.svelte
web-ui/src/routes/: +layout.svelte  +page.svelte
web-ui/src/routes/blocks/: +page.svelte
web-ui/src/routes/contracts/: +page.svelte
(+6 files in other folders)
