[package]
name = "mini-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Darshan"]
description = "A production-ready mini-blockchain implementation in Rust"
license = "MIT"
readme = "README.md"
keywords = ["blockchain", "cryptocurrency", "rust", "proof-of-work"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
# Cryptography
sha2 = "0.10"
secp256k1 = { version = "0.28", features = ["rand-std"] }
ripemd = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Encoding
hex = "0.4"
bs58 = "0.5"

# Random number generation
rand = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Async networking
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.5"

# REST API & WebSocket
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-tungstenite = "0.26"

# Static file embedding
rust-embed = "8.0"
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "blockchain"
path = "src/main.rs"
